<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Blau"
        android:textSize="14sp"
        app:layout_constraintCircle="@id/textView"
        app:layout_constraintCircleAngle="0"
        app:layout_constraintCircleRadius="110dp"
        tools:layout_editor_absoluteX="198dp"
        tools:layout_editor_absoluteY="256dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Fucsia"
        android:textSize="14sp"
        app:layout_constraintCircle="@id/textView"
        app:layout_constraintCircleAngle="30"
        app:layout_constraintCircleRadius="110dp"
        tools:layout_editor_absoluteX="252dp"
        tools:layout_editor_absoluteY="269dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Plata"
        android:textSize="14sp"
        app:layout_constraintCircle="@id/textView"
        app:layout_constraintCircleAngle="60"
        app:layout_constraintCircleRadius="110dp"
        tools:layout_editor_absoluteX="288dp"
        tools:layout_editor_absoluteY="306dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Gris"
        android:textSize="14sp"
        app:layout_constraintCircle="@id/textView"
        app:layout_constraintCircleAngle="90"
        app:layout_constraintCircleRadius="110dp"
        tools:layout_editor_absoluteX="302dp"
        tools:layout_editor_absoluteY="356dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Negre"
        android:textSize="14sp"
        app:layout_constraintCircle="@id/textView"
        app:layout_constraintCircleAngle="120"
        app:layout_constraintCircleRadius="110dp"
        tools:layout_editor_absoluteX="288dp"
        tools:layout_editor_absoluteY="406dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Vermell"
        android:textSize="14sp"
        app:layout_constraintCircle="@id/textView"
        app:layout_constraintCircleAngle="150"
        app:layout_constraintCircleRadius="110dp"
        tools:layout_editor_absoluteX="252dp"
        tools:layout_editor_absoluteY="443dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Marró"
        android:textSize="14sp"
        app:layout_constraintCircle="@id/textView"
        app:layout_constraintCircleAngle="180"
        app:layout_constraintCircleRadius="110dp"
        tools:layout_editor_absoluteX="202dp"
        tools:layout_editor_absoluteY="456dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Taronja"
        android:textSize="14sp"
        app:layout_constraintCircle="@id/textView"
        app:layout_constraintCircleAngle="210"
        app:layout_constraintCircleRadius="110dp"
        tools:layout_editor_absoluteX="152dp"
        tools:layout_editor_absoluteY="443dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Groc"
        android:textSize="14sp"
        app:layout_constraintCircle="@id/textView"
        app:layout_constraintCircleAngle="240"
        app:layout_constraintCircleRadius="110dp"
        tools:layout_editor_absoluteX="115dp"
        tools:layout_editor_absoluteY="406dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Oliva"
        android:textSize="14sp"
        app:layout_constraintCircle="@id/textView"
        app:layout_constraintCircleAngle="270"
        app:layout_constraintCircleRadius="110dp"
        tools:layout_editor_absoluteX="102dp"
        tools:layout_editor_absoluteY="356dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Lima"
        android:textSize="14sp"
        app:layout_constraintCircle="@id/textView"
        app:layout_constraintCircleAngle="300"
        app:layout_constraintCircleRadius="110dp"
        tools:layout_editor_absoluteX="111dp"
        tools:layout_editor_absoluteY="306dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Verd"
        android:textSize="14sp"
        app:layout_constraintCircle="@id/textView"
        app:layout_constraintCircleAngle="330"
        app:layout_constraintCircleRadius="110dp"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="269dp" />


    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Els colors"
        android:textColor="@color/colorGray"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.273" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:background="@color/colorBlue"
        android:text=" "
        android:textSize="20sp"
        app:layout_constraintCircle="@id/textView"
        app:layout_constraintCircleAngle="0"
        app:layout_constraintCircleRadius="80dp"
        tools:layout_editor_absoluteX="198dp"
        tools:layout_editor_absoluteY="256dp" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:background="@color/colorFuchsia"
        android:text=" "
        android:textSize="20sp"
        app:layout_constraintCircle="@id/textView"
        app:layout_constraintCircleAngle="30"
        app:layout_constraintCircleRadius="80dp"
        tools:layout_editor_absoluteX="252dp"
        tools:layout_editor_absoluteY="269dp" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:background="@color/colorSilver"
        android:text=" "
        android:textSize="20sp"
        app:layout_constraintCircle="@id/textView"
        app:layout_constraintCircleAngle="60"
        app:layout_constraintCircleRadius="80dp"
        tools:layout_editor_absoluteX="288dp"
        tools:layout_editor_absoluteY="306dp" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:background="@color/colorGray"
        android:text=" "
        android:textSize="20sp"
        app:layout_constraintCircle="@id/textView"
        app:layout_constraintCircleAngle="90"
        app:layout_constraintCircleRadius="80dp"
        tools:layout_editor_absoluteX="302dp"
        tools:layout_editor_absoluteY="356dp" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:background="@color/colorBlack"
        android:text=" "
        android:textSize="20sp"
        app:layout_constraintCircle="@id/textView"
        app:layout_constraintCircleAngle="120"
        app:layout_constraintCircleRadius="80dp"
        tools:layout_editor_absoluteX="288dp"
        tools:layout_editor_absoluteY="406dp" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:background="@color/colorRed"
        android:text=" "
        android:textSize="20sp"
        app:layout_constraintCircle="@id/textView"
        app:layout_constraintCircleAngle="150"
        app:layout_constraintCircleRadius="80dp"
        tools:layout_editor_absoluteX="252dp"
        tools:layout_editor_absoluteY="443dp" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:background="@color/colorMaroon"
        android:text=" "
        android:textSize="20sp"
        app:layout_constraintCircle="@id/textView"
        app:layout_constraintCircleAngle="180"
        app:layout_constraintCircleRadius="80dp"
        tools:layout_editor_absoluteX="202dp"
        tools:layout_editor_absoluteY="456dp" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:background="@color/colorOrange"
        android:text=" "
        android:textSize="20sp"
        app:layout_constraintCircle="@id/textView"
        app:layout_constraintCircleAngle="210"
        app:layout_constraintCircleRadius="80dp"
        tools:layout_editor_absoluteX="152dp"
        tools:layout_editor_absoluteY="443dp" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:background="@color/colorYellow"
        android:text=" "
        android:textSize="20sp"
        app:layout_constraintCircle="@id/textView"
        app:layout_constraintCircleAngle="240"
        app:layout_constraintCircleRadius="80dp"
        tools:layout_editor_absoluteX="115dp"
        tools:layout_editor_absoluteY="406dp" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:background="@color/colorOlive"
        android:text=" "
        android:textSize="20sp"
        app:layout_constraintCircle="@id/textView"
        app:layout_constraintCircleAngle="270"
        app:layout_constraintCircleRadius="80dp"
        tools:layout_editor_absoluteX="102dp"
        tools:layout_editor_absoluteY="356dp" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:background="@color/colorLime"
        android:text=" "
        android:textSize="20sp"
        app:layout_constraintCircle="@id/textView"
        app:layout_constraintCircleAngle="300"
        app:layout_constraintCircleRadius="80dp"
        tools:layout_editor_absoluteX="111dp"
        tools:layout_editor_absoluteY="306dp" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:background="@color/colorGreen"
        android:text=" "
        android:textSize="20sp"
        app:layout_constraintCircle="@+id/textView"
        app:layout_constraintCircleAngle="330"
        app:layout_constraintCircleRadius="80dp"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="269dp" />

</androidx.constraintlayout.widget.ConstraintLayout>